Fix SelLayerBlock overlap with parameter layer

--- a/src/web/app/components/beambox/right-panel/SelLayerBlock.module.scss
+++ b/src/web/app/components/beambox/right-panel/SelLayerBlock.module.scss
@@ -1,7 +1,5 @@
 .container {
   background: #f8f8f8;
-  border: 1px #e0e0e0 solid;
-  border-width: 1px 0 0 0;
   padding: 15px;
 
   .label {
